@@ -6,12 +6,14 @@
 	<PROPS>
 		<PROPERTY NAME="lineComment" VALUE="#" />
 	</PROPS>
-	<RULES HIGHLIGHT_DIGITS="TRUE" NO_WORD_SEP=".-">
+	<RULES DEFAULT="KEYWORD1">
 		<EOL_SPAN TYPE="COMMENT1" AT_LINE_START="TRUE">#</EOL_SPAN>
-		<MARK_PREVIOUS TYPE="KEYWORD1"
-			AT_LINE_START="TRUE" EXCLUDE_MATCH="TRUE">=</MARK_PREVIOUS>
-		<MARK_PREVIOUS TYPE="KEYWORD1"
-			AT_LINE_START="TRUE" EXCLUDE_MATCH="TRUE">:</MARK_PREVIOUS>
+		<EOL_SPAN TYPE="NULL" DELEGATE="PROP_VALUE">=</EOL_SPAN>
+		<EOL_SPAN TYPE="NULL" DELEGATE="PROP_VALUE">:</EOL_SPAN>
+		<EOL_SPAN TYPE="NULL" DELEGATE="PROP_VALUE"> </EOL_SPAN>
+		<EOL_SPAN TYPE="NULL" DELEGATE="PROP_VALUE">	</EOL_SPAN>
+	</RULES>
+	<RULES SET="PROP_VALUE" HIGHLIGHT_DIGITS="TRUE">
 		<!-- MessageFormat { ... } stuff -->
 		<SPAN TYPE="KEYWORD3" NO_LINE_BREAK="TRUE">
 			<BEGIN>{</BEGIN>
